// Copyright 2018 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// Sync protocol datatype extension for the reading list items.

// If you change or add any fields in this file, update proto_visitors.h and
// potentially proto_enum_conversions.{h, cc}.

syntax = "proto2";

option java_multiple_files = true;
option java_package = "org.chromium.components.sync.protocol";

option optimize_for = LITE_RUNTIME;

package sync_pb;

// Send Tab To Self list entry. This proto contains the fields synced to send
// a url across devices.
message SendTabToSelfSpecifics {
  // A random unique identifier for each shared tab.
  // Required.
  optional string guid = 5;
  // The name of the tab being shared.
  optional string title = 1;
  // The URL of the tab being shared.
  // Required.
  optional string url = 2;
  // The time the tab was shared as measured by the client in microseconds since
  // the windows epoch.
  optional int64 shared_time_usec = 3;
  // A non-unique but human readable name to describe this client, used in UI.
  optional string device_name = 4;
  // The stable Device_id of the device that this tab was shared with.
  // Required.
  optional string target_device_sync_cache_guid = 7;
  // A boolean to designate if the shared tab been opened on the target device.
  optional bool opened = 8;
  // Whether the notification for this proto been dismissed.
  optional bool notification_dismissed = 9;

  reserved "navigation_time_usec";
  reserved 6;
}
